--- a/mini-hackathon/astro/src/pages/index.astro
+++ b/mini-hackathon/astro/src/pages/index.astro
@@ -46,44 +46,44 @@ const metadata = {
 
   <Features
     id="features"
-    tagline="Features"
-    title="What you get with AstroWind"
-    subtitle="One of the most professional and comprehensive templates currently on the market. Most starred & forked Astro theme in 2022, 2023 and 2024."
+    tagline="Stop By!"
+    title="What you get with DevMornings"
+    subtitle="One of the most professional and comprehensive meetups currently on the market."
     items={[
       {
-        title: 'Astro + Tailwind CSS Integration',
+        title: 'Networking',
         description:
-          'A seamless integration between two great frameworks that offer high productivity, performance and versatility.',
+          'Every Sunday morning, we gather to meet new people.',
         icon: 'tabler:brand-tailwind',
       },
       {
-        title: 'Ready-to-use Components',
+        title: 'Mentorship',
         description:
-          'Widgets made with Tailwind CSS ready to be used in Marketing Websites, SaaS, Blogs, Personal Profiles, Small Business...',
+          'We help you master something new and share it with others.',
         icon: 'tabler:components',
       },
       {
-        title: 'Best Practices',
+        title: 'Learn Best Practices',
         description:
-          'Creating secure, efficient, and user-friendly websites that deliver exceptional experiences and lasting value.',
+          'We provide a comfortable environment for you to learn and grow.',
         icon: 'tabler:list-check',
       },
       {
-        title: 'Excellent Page Speed',
+        title: 'Get Hired',
         description:
-          'Having a good page speed impacts organic search ranking, improves user experience (UI/UX) and increase conversion rates.',
+          'We help you get hired by initing business owners.',
         icon: 'tabler:rocket',
       },
       {
-        title: 'Search Engine Optimization (SEO)',
+        title: 'Find Your Passion',
         description:
-          "SEO lies in its ability to enhance a website's visibility, driving organic traffic and enabling it to reach a wider audience.",
+          "We help you find your passion and pursue it.",
         icon: 'tabler:arrows-right-left',
       },
       {
         title: 'Open to new ideas and contributions',
         description:
-          'Embracing a culture that is open to new ideas and contributions is integral fostering innovation, collaboration, and a dynamic user experience.',
+          'You design the meetup and we get the resources you need.',
         icon: 'tabler:bulb',
       },
     ]}
@@ -93,23 +93,23 @@ const metadata = {
 
   <Content
     isReversed
-    tagline="Inside template"
-    title="AstroWind's Blueprint: Fun Meets Functionality!"
+    tagline="The Insider's Guide"
+    title="What to Expect At Our Meetup"
     items={[
       {
-        title: 'Built on top of Astro 5.0',
+        title: 'We Start At 1000',
         description:
-          'Benefiting from the performance and developer-friendly features of this modern static site generator.',
+          'We start at 10:00 AM sharp. Please be on time.',
       },
       {
-        title: 'Styled using Tailwind CSS',
+        title: 'Work On Your Own Or Chat With Others',
         description:
-          'Facilitating rapid design and consistent styling with this highly popular utility-first CSS framework.',
+          'We try not to be too serious.  Some members like to work on their own projects, while others like to chat and get to know each other.',
       },
       {
-        title: 'Cross-browser compatibility',
+        title: 'Show Off Your Projects',
         description:
-          'Ensure your website looks and functions consistently across various web browsers, delivering a seamless experience to all users.',
+          'At the end of the two hours we get together so you can show off your projects or ideas.',
       },
     ]}
     image={{
@@ -117,15 +117,6 @@ const metadata = {
       alt: 'Colorful Image',
     }}
   >
-    <Fragment slot="content">
-      <h3 class="text-2xl font-bold tracking-tight dark:text-white sm:text-3xl mb-2">Building on modern foundations</h3>
-      Gain a competitive advantage by incorporating industry leading practices
-    </Fragment>
-
-    <Fragment slot="bg">
-      <div class="absolute inset-0 bg-blue-50 dark:bg-transparent"></div>
-    </Fragment>
-  </Content>
 
   <!-- Content Widget **************** -->
 
