--- a/mini-hackathon/astro/src/pages/index.astro
+++ b/mini-hackathon/astro/src/pages/index.astro
@@ -27,7 +27,7 @@ const metadata = {
     image={{ src: heroImage, alt: 'DevMornings Bangkok Hero Image' }}
   >
     <Fragment slot="title">
-      DeMornings Bangkok - Self-Study For Coders, Students, And Anyone Interested in Tech!
+      DevMornings Bangkok - Self-Study For Coders, Students, And Anyone Interested in Tech!
     </Fragment>
 
     <Fragment slot="subtitle">
