--- a/mini-hackathon/astro/src/components/widgets/Announcement.astro
+++ b/mini-hackathon/astro/src/components/widgets/Announcement.astro
@@ -10,7 +10,7 @@
     >NEW</span
   >
   <a href="https://www.meetup.com/bkk-devmorning/" class="text-muted hover:underline dark:text-slate-400 font-medium"
-    >DevMornings is every Saturday morning! Click Here for More Info</a
+    >DevMorning is every Saturday morning! Click Here for More Info</a
   >
   <a
     target="_blank"
