--- a/mini-hackathon/astro/src/pages/index.astro
+++ b/mini-hackathon/astro/src/pages/index.astro
@@ -12,7 +12,7 @@ import CallToAction from '../components/widgets/CallToAction.astro';
 import heroImage from '../assets/images/hero-image.png';
 
 const metadata = {
-  title: 'DevMornings Bangkok — Self-study meetup for software developers.',
+  title: 'DevMorning Bangkok — Self-study meetup for software developers.',
   ignoreTitleTemplate: false,
 };
 ---
@@ -27,7 +27,7 @@ const metadata = {
     image={{ src: heroImage, alt: 'DevMornings Bangkok Hero Image' }}
   >
     <Fragment slot="title">
-      DevMornings Bangkok - Self-Study For Coders, Students, And Anyone Interested in Tech!
+      DevMorning Bangkok - Self-Study For Coders, Students, And Anyone Interested in Tech!
     </Fragment>
 
     <Fragment slot="subtitle">
